--- a/Resources/views/Elasticsearch/mapping.json.twig
+++ b/Resources/views/Elasticsearch/mapping.json.twig
@@ -9,6 +9,12 @@
 		},
 		"config": {
 			"type": "string"
+		},
+		"googleId": {
+			"type": "string"
+		},
+		"sheetId": {
+			"type": "string"
 		}
 	}
 },
